--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -33,10 +33,9 @@ body_class: index
     .page#four
       .content 4
 
-
-  .arrow-right
-  .arrow-left
-
 .sidebar
 
 
+.arrow-holder
+  .arrow-right  
+  .arrow-left
