--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -65,7 +65,7 @@ body, html
     .slider
       position: absolute
       top: 0
-      z-index: 3
+      z-index: 1
       height: 100%
       width: 100%
       background: orange
@@ -96,7 +96,7 @@ body, html
     position: absolute
     top: 0
     right: -500px
-    z-index: 1
+    z-index: 3
     width: 500px
     height: 100%
     background: red
@@ -104,32 +104,39 @@ body, html
     transition: right $sidebar-transition-duration
     -webkit-transition: right $sidebar-transition-duration /* Safari */
 
+  .arrow-holder
+    z-index: 2
+    position: fixed
+    left: 0
+    width: 100%
+    height: 100%
 
-  .arrow-left, .arrow-right
-    z-index: 3
-    position: absolute
-    width: 100px
-    height: 100px
-    top: 40%
-    background: black
-    border-radius: 50px
+    transition: left $sidebar-transition-duration
+    -webkit-transition: left $sidebar-transition-duration /* Safari */
 
-    transition: opacity 300ms
-    -webkit-transition: opacity 300ms /* Safari */
+    .arrow-left, .arrow-right
+      position: absolute
+      width: 100px
+      height: 100px
+      top: 40%
+      background: black
+      border-radius: 50px
 
-    @media (max-width: 480px) /* hide when on a phone */
-      display: none
-    
+      transition: opacity 300ms
+      -webkit-transition: opacity 300ms /* Safari */
 
-  .arrow-right
-    right: -50px
+      @media (max-width: 480px) /* hide when on a phone */
+        display: none
 
-  .arrow-left
-    left: -50px
+    .arrow-right
+      right: -50px
+
+    .arrow-left
+      left: -50px
 
 
 body.sidebar-visible
-  .wrapper
+  .wrapper, .arrow-holder
     left: -500px
 
   .sidebar
