--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -4,32 +4,19 @@
 
 $sidebar-transition-duration: 400ms
 $slide-transition-duration: 700ms   // edit in js as well
+$fx-transition-duration: 400ms
 
-
-
-
+$green: #44AB3D
+$yellow: #E8C026
+$red: #FF3200
+$purple: #960CE8
+$blue: #57C2FF
+$gray: #313131
+$dark-blue: #1F465C
 
 body, html
   height: 100%
   width: 100%
-
-  // overflow: hidden
-  // overflow-y: scroll       // scroll
-  // overflow-x: hidden
-
-
-  // .image-holder
-  //   position: fixed
-  //   z-index: 2
-  //   height: 100%
-  //   width: 100%
-  //   background: black
-
-  //   .image
-  //     width: 100%
-  //     height: 100%
-  //     background: yellow
-
 
   .wrapper
     position: relative
@@ -61,8 +48,28 @@ body, html
       width: 100%
 
       nav
-        text-align: right
+        overflow: auto
+        padding: 20px 20px 0 20px
 
+        .pages
+          float: left
+
+          a
+            font-size: 25px
+            text-decoration: none
+            margin-right: 15px
+
+            transition: color $fx-transition-duration
+            -webkit-transition: color $fx-transition-duration /* Safari */
+
+            &:link, &:visited
+              color: #fff
+
+            &:hover, &:active, &.active
+              color: #ddd
+
+
+        @import "_open-sidebar"
 
     .slider
       position: absolute
@@ -70,7 +77,7 @@ body, html
       z-index: 1
       height: 100%
       width: 100%
-      background: orange
+      background: black
       // opacity: 0.6
 
       &.slide
@@ -79,20 +86,40 @@ body, html
       
 
       .page
+        position: relative
         float: left
         min-height: 100%
         width: 100%
 
+        .content
+
+          .page-number
+            margin: 80px 0 0 50px
+            font-size: 70px
+
+          p
+            position: absolute
+            top: 300px
+            left: 0
+            right: 0
+            text-align: center
+            color: #fff
+
+
         &#one
-          background: blue
+          background: $green
+          color: $red
         &#two
-          background: green
+          background: $yellow
+          color: $blue
           .content
             height: 1600px
         &#three
-          background: cyan
+          background: $red
+          color:  $green
         &#four
-          background: yellow
+          background: $purple
+          color: $yellow
 
   .sidebar
     z-index: 3
@@ -100,10 +127,39 @@ body, html
     top: -400px
     width: 100%
     height: 400px
-    background: red
+    background: $blue
 
     transition: top $sidebar-transition-duration
     -webkit-transition: top $sidebar-transition-duration /* Safari */
+
+    @import "_close-sidebar"
+
+
+
+    .content
+
+      ul
+        list-style: none
+        margin: 20px 0 0 20px
+        padding: 0
+
+        li
+          padding-bottom: 5px
+          font-size: 30px
+
+          a
+            text-decoration: none
+
+            transition: color $fx-transition-duration
+            -webkit-transition: color $fx-transition-duration /* Safari */
+
+            &:link, &:visited
+              color: $dark-blue
+
+            &:hover, &:active, &.active
+              color: #fff
+
+
 
 
   .arrow-holder
@@ -113,29 +169,54 @@ body, html
     top: 0
     width: 100%
     height: 100%
+    pointer-events: none
 
     transition: top $sidebar-transition-duration
     -webkit-transition: top $sidebar-transition-duration /* Safari */
 
-    .arrow-left, .arrow-right
+    .arrow
       position: absolute
-      width: 100px
-      height: 100px
-      top: 40%
-      background: black
-      border-radius: 50px
+      width: 60px
+      height: 60px
+      top: 50%
+      margin-top: -30px
+      pointer-events: auto
+      cursor: pointer
 
-      transition: opacity 300ms
-      -webkit-transition: opacity 300ms /* Safari */
+      transition: opacity $fx-transition-duration
+      -webkit-transition: opacity $fx-transition-duration /* Safari */
 
       @media (max-width: 480px) /* hide when on a phone */
         display: none
 
-    .arrow-right
-      right: -50px
+      &:hover .bar
+        background-color: #ddd
 
-    .arrow-left
-      left: -50px
+      .bar
+        position: absolute
+        background-color: #fff
+        border-radius: 2px
+
+        transition: background $fx-transition-duration
+        -webkit-transition: background $fx-transition-duration /* Safari */
+
+        &:nth-of-type(1)
+          height: 4px
+          width: 100%
+
+        &:nth-of-type(2)
+          right: 0
+          height: 100%
+          width: 4px
+
+      &.left
+        left: 30px
+        transform: rotate(-135deg)
+
+      &.right
+        right: 30px
+        transform: rotate(45deg)
+
 
 
 body.sidebar-visible
@@ -156,15 +237,16 @@ body.sidebar-visible
     -webkit-transition: opacity $sidebar-transition-duration linear /* Safari */
 
 body.no-left
-  .arrow-left
+  .arrow.left
     opacity: 0.2
 
 body.no-right
-  .arrow-right
+  .arrow.right
     opacity: 0.2
 
 
 footer
   width: 100%
   height: 300px
-  background-color: purple
+  background-color: $gray
+
