--- a/source/stylesheets/_close-sidebar.sass
+++ b/source/stylesheets/_close-sidebar.sass
@@ -32,7 +32,8 @@
       transform: rotate(45deg)
 
   &:hover
-    top: 8px
+    top: 0
+    height: 68px
 
     transition: top $fx-transition-duration $fx-transition-duration
     -webkit-transition: top $fx-transition-duration $fx-transition-duration /* Safari */
